Fixed pill alignment

--- a/public/scss/_base.scss
+++ b/public/scss/_base.scss
@@ -155,6 +155,7 @@ input {
   color: $primary;
   font-weight: $font-bold;
   line-height: 1.6em;
+  vertical-align: middle;
 }
 
 
